--- a/searchandreplace/fr_FR.po
+++ b/searchandreplace/fr_FR.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Search and Replace\n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2007-11-01 12:09+0100\n"
-"Last-Translator: Valentin GUENICHON <valentin@guenichon.com>\n"
+"PO-Revision-Date: 2007-11-04 10:27+0100\n"
+"Last-Translator: Frank Bueltge <frank@bueltge.de>\n"
 "Language-Team: Frank Bueltge <frank@bueltge.de>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
@@ -119,7 +119,7 @@ msgid "mit"
 msgstr "avec"
 
 #: searchandreplace.php:184
-msgid "Asuf&uuml;hren"
+msgid "Ausf&uuml;hren"
 msgstr "Go"
 
 #: searchandreplace.php:189
