--- a/languages/searchandreplace-xx_XX.pot
+++ b/languages/searchandreplace-xx_XX.pot
@@ -1,177 +1,172 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: Search and Replace\n"
+"Project-Id-Version: Search and Replace v.1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-06-11 17:38+0100\n"
 "PO-Revision-Date: \n"
-"Last-Translator: Frank Bueltge <frank@bueltge.de>\n"
-"Language-Team: Team Blogos <WordPress@Blogos.dk>\n"
+"Last-Translator: Martien van de Griendt <info@vandegriendtwebsites.nl>\n"
+"Language-Team: Martien van de Griendt <info@vandegriendtwebsites.nl>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Poedit-Language: Danish\n"
-"X-Poedit-Country: DENMARK\n"
-"X-Poedit-SourceCharset: utf-8\n"
-"X-Poedit-KeywordsList: __;_e;__ngettext:1,2;_n:1,2;__ngettext_noop:1,2;_n_noop:1,2;_c,_nc:4c,1,2;_x:1,2c;_ex:1,2c;_nx:4c,1,2;_nx_noop:4c,1,2;\n"
-"X-Poedit-Basepath: d:/wordpress/plugins/search-and-replace\n"
-"X-Poedit-Bookmarks: \n"
-"X-Poedit-SearchPath-0: d:/wordpress/plugins/search-and-replace\n"
-"X-Textdomain-Support: yes"
+"X-Poedit-Language: Dutch\n"
+"X-Poedit-Country: NETHERLANDS\n"
 
+# @ default
 #: search-and-replace.php:86
-#@ default
 msgid "Settings"
-msgstr "Einstellungen"
+msgstr "Instellingen"
 
+# @ searchandreplace
 #. translators: plugin header field 'Name'
 #: search-and-replace.php:0
 #: search-and-replace.php:102
 #: search-and-replace.php:789
-#@ searchandreplace
 msgid "Search &amp; Replace"
-msgstr "Suchen &amp; Ersetzen"
+msgstr "Search &amp; Replace"
 
+# @ searchandreplace
 #: search-and-replace.php:152
-#@ searchandreplace
 msgid "Nothing (Checkbox) selected to modify!"
-msgstr "<strong>Keine Aktion (Checkbox) gew&auml;hlt um zu ersetzen!</strong>"
+msgstr "U heeft niets geselecteerd om te vervangen!"
 
+# @ searchandreplace
 #: search-and-replace.php:175
-#@ searchandreplace
 msgid "Looking @ post content"
-msgstr "Suche nach Beitr&auml;gen"
+msgstr "Zoeken in Content"
 
+# @ searchandreplace
 #: search-and-replace.php:189
-#@ searchandreplace
 msgid "Looking @ ID"
-msgstr "Suche nach ID"
+msgstr "Zoeken in ID"
 
+# @ searchandreplace
 #: search-and-replace.php:227
-#@ searchandreplace
 msgid "Looking @ GUID"
-msgstr "Suche nach <acronym title=\"Global Unique Identifier\">GUID</acronym>"
+msgstr "Zoeken in GUID"
 
+# @ searchandreplace
 #: search-and-replace.php:241
-#@ searchandreplace
 msgid "Looking @ Titeln"
-msgstr "Suche nach Titeln"
+msgstr "Zoeken in Titel"
 
+# @ searchandreplace
 #: search-and-replace.php:261
-#@ searchandreplace
 msgid "Looking @ post excerpts"
-msgstr "Suche nach Auszügen"
+msgstr "Zoeken in Samenvatting"
 
+# @ searchandreplace
 #: search-and-replace.php:275
-#@ searchandreplace
 msgid "Looking @ Meta Daten"
-msgstr "Suche nach Metadaten"
+msgstr "Zoeken in Meta Data"
 
+# @ searchandreplace
 #: search-and-replace.php:289
-#@ searchandreplace
 msgid "Looking @ modifying comments text"
-msgstr "Suche nach modifizierten Kommentartexten"
+msgstr "Zoeken in Reacties"
 
+# @ searchandreplace
 #: search-and-replace.php:303
-#@ searchandreplace
 msgid "Looking @ modifying comments author"
-msgstr "Suche nach modifizierten Kommentarautoren"
+msgstr "Zoeken in Auteurs van Reacties"
 
+# @ searchandreplace
 #: search-and-replace.php:317
-#@ searchandreplace
 msgid "Looking @ modifying comments author e-mail"
-msgstr "Suche nach modifizierten Kommentarautoren E-Mail-Adressen"
+msgstr "Zoeken in Emailadres van Auteur van Reacties"
 
+# @ searchandreplace
 #: search-and-replace.php:331
-#@ searchandreplace
 msgid "Looking @ modifying comments author URLs"
-msgstr "Suche nach modifizierten Kommentarautoren URLs"
+msgstr "Zoeken in Webadres (URL) van Auteur van Reacties"
 
+# @ searchandreplace
 #: search-and-replace.php:345
-#@ searchandreplace
 msgid "Looking @ Comment-Count"
-msgstr "Suche nach Kommentarzähler"
+msgstr "Zoeken in Reactie-teller"
 
+# @ searchandreplace
 #: search-and-replace.php:359
-#@ searchandreplace
 msgid "Looking @ category description"
-msgstr "Suche nach Kategoriebeschreibung"
+msgstr "Zoeken in Categorie-omschrijving"
 
+# @ searchandreplace
 #: search-and-replace.php:373
-#@ searchandreplace
 msgid "Looking @ Tags"
-msgstr "Suche nach Tags"
+msgstr "Zoeken in Tags en Categorie&euml;n"
 
+# @ searchandreplace
 #: search-and-replace.php:393
-#@ searchandreplace
 msgid "Looking @ User-ID"
-msgstr "Suche nach User-ID"
+msgstr "Zoeken in Gebruikers-ID"
 
+# @ searchandreplace
 #: search-and-replace.php:425
-#@ searchandreplace
 msgid "Looking @ User Login"
-msgstr "Suche nach User-Login"
+msgstr "Zoeken in Gebruikers-login"
 
+# @ searchandreplace
 #: search-and-replace.php:483
-#@ searchandreplace
 msgid "The inquiry could not be implemented:"
-msgstr "Die Anfrage konnte nicht ausgef&uuml;hrt werden:"
+msgstr "De zoekopdracht kon niet worden uitgevoerd:"
 
+# @ searchandreplace
 #: search-and-replace.php:496
-#@ searchandreplace
 msgid "entries found."
-msgstr "Eintr&auml;ge gefunden."
+msgstr "zoekresultaten gevonden."
 
+# @ searchandreplace
 #: search-and-replace.php:737
-#@ searchandreplace
 msgid "You must specify some text to replace!"
-msgstr "Du musst Text spezifizieren, um Text zu ersetzen!"
+msgstr "U heeft geen zoektekst ingevoerd!"
 
+# @ searchandreplace
 #: search-and-replace.php:740
-#@ searchandreplace
 msgid "Attempting to perform search and replace ..."
-msgstr "Versuche die Suche duchzuf&uuml;hren und zu ersetzen ..."
+msgstr "Bezig met zoeken en vervangen ..."
 
+# @ searchandreplace
 #: search-and-replace.php:741
-#@ searchandreplace
 msgid "Search"
-msgstr "Suche"
+msgstr "Zoeken"
 
+# @ searchandreplace
 #: search-and-replace.php:743
-#@ searchandreplace
 msgid "and replace with"
-msgstr "und ersetze mit"
+msgstr "en vervangen door"
 
+# @ searchandreplace
 #: search-and-replace.php:773
-#@ searchandreplace
 msgid "Completed successfully!"
-msgstr "Erfolgreich durchgef&uuml;hrt!"
+msgstr "Met succes voltooid!"
 
+# @ searchandreplace
 #: search-and-replace.php:795
-#@ searchandreplace
 msgid "You do not have sufficient permissions to edit plugins for this blog."
-msgstr "Du hast keine ausreichenden Rechte um das Plugin für dieses Blog zu editieren."
+msgstr "U heeft onvoldoende rechten om plugins te bewerken."
 
+# @ searchandreplace
 #: search-and-replace.php:801
-#@ searchandreplace
 msgid "Information Search &amp; Replace"
-msgstr "Hinweise Suchen &amp; Ersetzen"
+msgstr "Informatie over Search &amp; Replace"
 
+# @ searchandreplace
 #: search-and-replace.php:804
-#@ searchandreplace
 msgid "Text search is case sensitive and has no pattern matching capabilites. This replace function matchs raw text so it can be used to replace HTML tags too."
-msgstr "Die Textsuche ist sensitiv und besitzt keine passende Abstimmungsbef&auml;higung. Die Funktion arbeitet stringbasierend und kann somit auch HTML-Tags ersetzen."
+msgstr "De zoektekst is hoofdlettergevoelig. Reguliere expressies zijn niet mogelijk. Er wordt gezocht naar platte tekst; daarom is het ook mogelijk HTML tags te vervangen."
 
+# @ searchandreplace
 #: search-and-replace.php:841
-#@ searchandreplace
 msgid "Search in"
-msgstr "Suche in"
+msgstr "Zoeken in"
 
+# @ searchandreplace
 #: search-and-replace.php:848
-#@ searchandreplace
 msgid "Content"
-msgstr "Beitr&auml;gen"
+msgstr "Content"
 
+# @ searchandreplace
 #: search-and-replace.php:812
 #: search-and-replace.php:822
 #: search-and-replace.php:850
@@ -190,10 +185,10 @@ msgstr "Beitr&auml;gen"
 #: search-and-replace.php:915
 #: search-and-replace.php:921
 #: search-and-replace.php:928
-#@ searchandreplace
 msgid "field:"
-msgstr "Feld:"
+msgstr "veld:"
 
+# @ searchandreplace
 #: search-and-replace.php:850
 #: search-and-replace.php:855
 #: search-and-replace.php:860
@@ -209,229 +204,228 @@ msgstr "Feld:"
 #: search-and-replace.php:910
 #: search-and-replace.php:921
 #: search-and-replace.php:928
-#@ searchandreplace
 msgid "table:"
-msgstr "Tabelle:"
+msgstr "tabel:"
 
+# @ searchandreplace
 #: search-and-replace.php:853
-#@ searchandreplace
 msgid "GUID"
-msgstr "<acronym title=\"Global Unique Identifier\">GUID</acronym>"
+msgstr "GUID"
 
+# @ searchandreplace
 #: search-and-replace.php:858
-#@ searchandreplace
 msgid "Titles"
-msgstr "Title"
+msgstr "Titels"
 
+# @ searchandreplace
 #: search-and-replace.php:863
-#@ searchandreplace
 msgid "Excerpts"
-msgstr "Auszüge"
+msgstr "Samenvattingen"
 
+# @ searchandreplace
 #: search-and-replace.php:868
-#@ searchandreplace
 msgid "Meta Data"
-msgstr "Metadaten"
+msgstr "Meta Data"
 
+# @ searchandreplace
 #: search-and-replace.php:873
-#@ searchandreplace
 msgid "Comments content"
-msgstr "Kommentarbeitr&auml;gen"
+msgstr "Tekst reacties"
 
+# @ searchandreplace
 #: search-and-replace.php:878
-#@ searchandreplace
 msgid "Comments author"
-msgstr "Kommentarautorens"
+msgstr "Auteurs reacties"
 
+# @ searchandreplace
 #: search-and-replace.php:883
-#@ searchandreplace
 msgid "Comments author e-mail"
-msgstr "Kommentarautoren-E-Mail"
+msgstr "Email auteurs reacties"
 
+# @ searchandreplace
 #: search-and-replace.php:888
-#@ searchandreplace
 msgid "Comments author URL"
-msgstr "Kommentarautoren-URL"
+msgstr "URL auteurs reacties"
 
+# @ searchandreplace
 #: search-and-replace.php:893
-#@ searchandreplace
 msgid "Comments-Counter"
-msgstr "Kommentar-Zähler"
+msgstr "Bericht-teller"
 
+# @ searchandreplace
 #: search-and-replace.php:898
-#@ searchandreplace
 msgid "Category description"
-msgstr "Kategoriebeschreibung"
+msgstr "Categorie-omschrijving"
 
+# @ searchandreplace
 #: search-and-replace.php:903
-#@ searchandreplace
 msgid "Tags &amp; Categories"
-msgstr "Tags &amp; Kategorien"
+msgstr "Tags &amp; Categorie&euml;n"
 
+# @ searchandreplace
 #: search-and-replace.php:905
 #: search-and-replace.php:910
 #: search-and-replace.php:915
 #: search-and-replace.php:921
-#@ searchandreplace
 msgid "and"
-msgstr "und"
+msgstr "en"
 
+# @ searchandreplace
 #: search-and-replace.php:908
-#@ searchandreplace
 msgid "User-ID"
-msgstr "User-ID"
+msgstr "Gebruikeres ID"
 
+# @ searchandreplace
 #: search-and-replace.php:913
-#@ searchandreplace
 msgid "User-login"
-msgstr "User-Login"
+msgstr "Gebruikers Login"
 
+# @ searchandreplace
 #: search-and-replace.php:919
-#@ searchandreplace
 msgid "ID"
 msgstr "ID"
 
+# @ searchandreplace
 #: search-and-replace.php:933
-#@ searchandreplace
 msgid "Checkboxes to assign"
-msgstr "Checkboxen markieren"
+msgstr "Maak een keuze"
 
+# @ searchandreplace
 #: search-and-replace.php:933
-#@ searchandreplace
 msgid "all"
 msgstr "alle"
 
+# @ searchandreplace
 #: search-and-replace.php:933
-#@ searchandreplace
 msgid "Checkboxes to unmask"
-msgstr "Checkboxen demarkieren"
+msgstr "Checkbox deselecteren"
 
+# @ searchandreplace
 #: search-and-replace.php:933
-#@ searchandreplace
 msgid "none"
-msgstr "keine"
+msgstr "geen"
 
+# @ searchandreplace
 #: search-and-replace.php:831
 #: search-and-replace.php:949
-#@ searchandreplace
 msgid "Go"
 msgstr "Start"
 
+# @ searchandreplace
 #: search-and-replace.php:960
-#@ searchandreplace
 msgid "Information on the plugin"
-msgstr "Hinweise zum Plugin"
+msgstr "Informatie over de plugin"
 
+# @ searchandreplace
 #: search-and-replace.php:962
-#@ searchandreplace
 msgid "&quot;Search and Replace&quot; originalplugin (en) created by <a href=\"http://thedeadone.net/\">Mark Cunningham</a> and provided (comments) by durch <a href=\"http://www.gonahkar.com\">Gonahkar</a>.<br />&quot;Search &amp; Replace&quot;, current version provided by <a href=\"http://bueltge.de\">Frank Bueltge</a>."
-msgstr "&quot;Search and Replace&quot; Originalplugin (en) ist von <a href='http://thedeadone.net/'>Mark Cunningham</a> und wurde erweitert (Kommentarbeitr&auml;ge, Kommentarautor) durch <a href='http://www.gonahkar.com'>Gonahkar</a>.<br />&quot;Suchen &amp; Ersetzen&quot; wurde erweitert und gepflegt in der aktuellen Version durch <a href='http://bueltge.de'>Frank Bueltge</a>."
+msgstr "De originele &quot;Search and Replace&quot;(en) werd gemaakt door <a href='http://thedeadone.net/'>Mark Cunningham</a> en verbeterd (opmerkingen en kommentaar) door <a href='http://www.gonahkar.com'>Gonahkar</a>.<br />De huidige versie &quot;Suchen &amp; Ersetzen&quot; wordt gemaakt en onderhouden door <a href='http://bueltge.de'>Frank Bueltge</a>."
 
+# @ searchandreplace
 #: search-and-replace.php:963
-#@ searchandreplace
 msgid "Further information: Visit the <a href=\"http://bueltge.de/wp-suchen-und-ersetzen-de-plugin/114/\">plugin homepage</a> for further information or to grab the latest version of this plugin."
-msgstr "Weitere Informationen: Besuche die <a href='http://bueltge.de/wp-suchen-und-ersetzen-de-plugin/114'>plugin homepage</a> f&uuml;r weitere Informationen oder nutze die letzte Version des Plugins."
+msgstr "Nadere informatie: kijk op de <a href='http://bueltge.de/wp-suchen-und-ersetzen-de-plugin/114'>plugin homepage</a> of installeer de meest recente versie."
 
+# @ searchandreplace
 #: search-and-replace.php:963
-#@ searchandreplace
 msgid "You want to thank me? Visit my <a href=\"http://bueltge.de/wunschliste\">wishlist</a>."
-msgstr "Du willst Danke sagen? Besuche meine <a href='http://bueltge.de/wunschliste'>Wunschliste</a>."
+msgstr "Wilt u mij bedanken? Bezoek mijn <a href='http://bueltge.de/wunschliste'>verlanglijst</a>."
 
+# @ searchandreplace
 #. translators: plugin header field 'PluginURI'
 #: search-and-replace.php:0
-#@ searchandreplace
 msgid "http://bueltge.de/wp-suchen-und-ersetzen-de-plugin/114/"
 msgstr ""
 
+# @ searchandreplace
 #. translators: plugin header field 'Description'
 #: search-and-replace.php:0
-#@ searchandreplace
 msgid "A simple search for find strings in your database and replace the string."
-msgstr "Eine einfache Suche für das Finden von Zeichenketten in der Datenbank und der Möglichkeit des Ersetzens."
+msgstr "Eenvoudig zoeken en vervangen van tekst in uw database."
 
+# @ searchandreplace
 #. translators: plugin header field 'Author'
 #: search-and-replace.php:0
-#@ searchandreplace
 msgid "Frank B&uuml;ltge"
 msgstr ""
 
+# @ searchandreplace
 #. translators: plugin header field 'AuthorURI'
 #: search-and-replace.php:0
-#@ searchandreplace
 msgid "http://bueltge.de/"
 msgstr ""
 
+# @ searchandreplace
 #: search-and-replace.php:157
-#@ searchandreplace
 msgid "Looking @ all"
-msgstr "Suche in allen Feldern in allen Tabellen"
+msgstr "Zoeken in alles"
 
+# @ searchandreplace
 #: search-and-replace.php:625
-#@ searchandreplace
 msgid "is not found in this Database"
-msgstr "wurde nicht in der Datenbank gefunden"
+msgstr "niet gevonden in de database"
 
+# @ searchandreplace
 #: search-and-replace.php:803
-#@ searchandreplace
 msgid "This plugin uses an standard SQL query so it modifies your database directly!<br /><strong>Attention: </strong>You <strong>cannot</strong> undo any changes made by this plugin. <strong>It is therefore advisable to backup your database before running this plugin.</strong> No legal claims to the author of this plugin! <strong>Activate</strong> the plugin <strong>only</strong>, if you want to use it!"
-msgstr "Dieses Plugin arbeitet mit einer Standard SQL Abfrage und verändert deine Datenbank direkt!<br /><strong>Achtung: </strong>Du <strong>kannst nichts</strong> rückgängig machen mit diesem Plugin. <strong>Fertige eine Sicherung deiner Datenbank im Vorfeld an.</strong> Keine Rechtsansprüche an den Autor des Plugins! <strong>Aktiviere</strong> das Plugin <strong>nur</strong>, wenn es benötigt wird!"
+msgstr "Deze plugin gebruikt standaard SQL; aanpassingen in de database vinden direkt plaats!<br /><strong>Let op: </strong>veranderingen door deze plugin zijn <strong>onomkeerbaar</strong>.<strong>Maak daarom vooraf een backup van uw database.</strong>De auteur van deze plugin aanvaardt geen enkele wettelijke aansprakelijkheid! Activeer de plugin alleen als u hem nodig hebt. "
 
+# @ searchandreplace
 #: search-and-replace.php:810
-#@ searchandreplace
 msgid "All - only search!"
-msgstr "Alle - nur Suchen!"
+msgstr "Alles - alleen zoeken!"
 
+# @ searchandreplace
 #: search-and-replace.php:816
 #: search-and-replace.php:940
-#@ searchandreplace
 msgid "Search for"
-msgstr "Suche nach"
+msgstr "Zoeken naar"
 
+# @ searchandreplace
 #: search-and-replace.php:826
 #: search-and-replace.php:944
-#@ searchandreplace
 msgid "Replaced with"
-msgstr "Ersetze mit"
+msgstr "Vervangen door"
 
+# @ searchandreplace
 #: search-and-replace.php:477
-#@ searchandreplace
 msgid "... in table"
-msgstr "... in Tabelle"
+msgstr "... in de tabel"
 
+# @ searchandreplace
 #: search-and-replace.php:805
-#@ searchandreplace
 msgid "<strong>Step One:</strong> Use the follow search for a better information with return the sql-query and tables with the results. The search use alle fields in all tables! After this you have more informations and you can use the replace function."
-msgstr "<strong>Schritt Eins:</strong> Nutze die folgende Suche für eine bessere Information mit Rückgabe des SQL-Query und der Tabellen mit den Resultaten. Die Suche nutzt alle Felder in allen Tabellen! Nach dieser Suche hast du mehr Informationen und kann die Funktion zum Ersetzen nutzen."
+msgstr "<strong>Stap &eacute;&eacute;n:</strong> Gebruik de volgende zoekopdracht om meer informatie te krijgen over de gebruikte SQL-query en de resulterende tabellen. Alle velden in alle tabellen worden doorzocht! U bent dan beter ge&iuml;nformeerd voordat u de vervang-functie gebruikt."
 
+# @ searchandreplace
 #. translators: plugin header field 'Version'
 #: search-and-replace.php:0
-#@ searchandreplace
 msgid "2.6.2"
 msgstr ""
 
+# @ searchandreplace
 #: search-and-replace.php:166
-#@ searchandreplace
 msgid "Looking & Replace @ all"
-msgstr "Suchen und Ersetzen in allen Feldern in allen Tabellen"
+msgstr "Zoeken en vervangen in alles"
 
+# @ searchandreplace
 #: search-and-replace.php:445
-#@ searchandreplace
 msgid "Looking @ signups"
-msgstr "Suche nach Anmeldungen"
+msgstr "Zoeken in aanmeldingen"
 
+# @ searchandreplace
 #: search-and-replace.php:812
 #: search-and-replace.php:822
-#@ searchandreplace
 msgid "tables:"
-msgstr "Tabellen:"
+msgstr "tabellen:"
 
+# @ searchandreplace
 #: search-and-replace.php:820
-#@ searchandreplace
-msgid "All - search/replace - special care!"
-msgstr "Alle - Suchen/Ersetzen - besondere Vorsicht geboten!"
+msgid "All - search/replace!"
+msgstr "Alles - zoeken / vervangen!"
 
+# @ searchandreplace
 #: search-and-replace.php:926
-#@ searchandreplace
 msgid "Signups"
-msgstr "Anmeldungen"
+msgstr "Aanmeldingen"
 
